# WaveSimulator

./: CMakeLists.txt  README.md  WaveSimulator.kdev4  buffer.h  error.h  main.c  main.cpp  pass.frag  pass2.frag  pass3.frag  quad.frag  quad.vert  renderer.cpp  renderer.h  shader.h  triangles.frag  vmath.h
